# rubric-gates

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  app.py  schemas.py
docs/plans/: implementation-plan.md
gate/hooks/: post_edit.py
gate/overrides/: manager.py
gate/patterns/: __init__.py  anti_gaming.py  base.py  credentials.py  custom.py  data_exposure.py  dependencies.py  file_ops.py  shell_injection.py  sql_injection.py
gate/tiers/: advisory.py  evaluator.py
registry/catalog/: catalog.py
registry/dashboard/: views.py
registry/graduation/: regression.py  rubrics.py  tiers.py  triggers.py
registry/workflows/: engine.py  knowledge_transfer.py
scorecard/: __main__.py  engine.py  score.py
scorecard/dashboard/: cli.py
scorecard/dimensions/: correctness.py  documentation.py  maintainability.py  security.py  testability.py
scorecard/hooks/: post_edit.py
shared/: __init__.py  config.py  models.py  storage.py
tests/: test_api.py  test_async_scoring.py  test_cli.py  test_config.py  test_configurable_patterns.py  test_experiment_tracking.py  test_grpo_update.py  test_integration.py  test_model_registry.py  test_models.py  test_regression_detector.py  test_source_code.py  test_storage.py  test_threshold_profiles.py
tests/gate/: test_advisory.py  test_anti_gaming.py  test_evaluator.py  test_gate_hook.py  test_overrides.py  (+1 more)
training/: base.py  code_gen.py  data.py  distillation.py  distilled_scorer.py  gpu.py  model_registry.py  rubric_generator.py  skill_optimizer.py  skill_runner.py  tracking.py
(+23 files in other folders)
