[project]
name = "rubric-gates"
version = "0.1.0"
description = "Rubric-based quality gates for AI-generated code"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.39.0",
]
training = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.0",
    "accelerate>=0.30",
    "trl>=0.9",
    "peft>=0.11",
    "bitsandbytes",
    "wandb",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
